# whats-new-pdf

./: .env.example  .gitignore  CLAUDE.md  README.md  generate.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh
.githooks/: pre-push  prepare-commit-msg
.kiro/steering/: project.md
data/: 2026-06.yml
docs/: PROMPT.md
templates/: report.html.j2
webapp/: defaults.py  llm_parser.py  parser.py  renderer.py  server.py  summary.py  url_checker.py
webapp/static/: app.js  index.html  sample.json
