[project]
name = "aws-report-studio"
version = "1.0.0"
description = "AWS 서비스 변경사항 리포트 PDF 생성기 (웹 + CLI)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "out", "claude-code-best-practices"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
  "E501",  # 줄 길이는 formatter가 관리
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # playwright/boto3/openai/yaml 등 서드파티 스텁 미보유 허용
warn_unused_ignores = true
no_implicit_optional = true
files = ["webapp", "generate.py"]
exclude = "(^|/)(\\.venv|out|claude-code-best-practices)/"
